namespace.yml
apiVersion: v1
kind: Namespace
# definicja przestrzeni nazw o nazwie lab10
metadata:
  name: lab10
